--- a/course_website/syllabus.css
+++ b/course_website/syllabus.css
@@ -1,31 +1,45 @@
 html, body {
     height: 100%;
     margin: 0;
-    font-family: "Georgia", serif;
-    background-color: aliceblue;
-}
-
-html, body {
-    height: 100%;
-    margin: 0;
     display: flex;
     flex-direction: column;
 }
 
+.main-content {
+    flex: 1;  
+}
+
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px;
+}
+
+body{
+    margin: 0;
+}
 .content {
     flex: 1;
     display: flex;
     flex-direction: column;
 }
+
+:root {
+    --nav-height: 20vh;
+  }
+  
 .syllabus-header {
     text-align: center;
-    background-color: aliceblue;
-    color: rgb(114, 95, 160);
-    font-family: "Georgia", serif;
-    font-size: 20px;
-    margin-top: 120px;
-    padding: 20px;
-    border-bottom: 2px solid #003366;
+  background-color: aliceblue;
+  color: rgb(114, 95, 160);
+  font-family: "Georgia", serif;
+  font-size: 22px;
+  margin-top: var(--nav-height); 
+  padding: 20px;
+  border-bottom: 2px solid #003366;
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
 #dark-mode-toggle:checked ~ .syllabus-header {
@@ -38,6 +52,7 @@ html, body {
     display: flex;
     justify-content: center;
     gap: 20px;
+    background-color: aliceblue;
     padding: 20px;
     flex: 1;
 }
@@ -115,13 +130,15 @@ footer a:hover {
     justify-content: center;
     align-items: center;
     background-color: #003366;
+    font-family: "Georgia", serif;
     padding: 15px 0;
+    height: var(--nav-height); 
+    width: 100%; 
     position: fixed;
-    width: 100%;
     top: 0;
     left: 0;
     z-index: 1000;
-}
+  }
 
 .leftnavigation ul {
     list-style: none;
@@ -218,3 +235,11 @@ footer a:hover {
         font-size: 16px;
     }
 }
+@media screen and (max-width: 1024px) {
+    .leftnavigation ul {
+      flex-wrap: wrap;
+      justify-content: center;
+      max-width: 100%;
+    }
+  }
+  
